--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
     <Compile Include="Assets\Patrol.cs" />
     <Compile Include="Assets\DataPersistence\SaveSlotsMenu.cs" />
+    <Compile Include="Assets\QuestSystem\QuestData.cs" />
     <Compile Include="Assets\Manager.cs" />
     <Compile Include="Assets\Interactable.cs" />
     <Compile Include="Assets\QuestSystem\Quest.cs" />
@@ -127,8 +128,8 @@
     <Compile Include="Assets\LobbyDataEntry.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshProFloatingText.cs" />
-    <Compile Include="Assets\PlayerObjectController.cs" />
     <Compile Include="Assets\QuestSystem\QuestPoint.cs" />
+    <Compile Include="Assets\PlayerObjectController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
     <Compile Include="Assets\GetClosestEnemy.cs" />
     <Compile Include="Assets\PlayerStats.cs" />
@@ -136,6 +137,7 @@
     <Compile Include="Assets\DataPersistantEnemy.cs" />
     <Compile Include="Assets\QuestSystem\QuestManager.cs" />
     <Compile Include="Assets\SaveSlot.cs" />
+    <Compile Include="Assets\QuestSystem\QuestStepState.cs" />
     <Compile Include="Assets\DataPersistence\SerializableTypes\SerializableDictionary.cs" />
     <Compile Include="Assets\CustomNetworkManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
