Got an arena and scene transitions set up.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Assets\EnemyAI.cs" />
     <Compile Include="Assets\QuestSlot.cs" />
     <Compile Include="Assets\Slot.cs" />
+    <Compile Include="Assets\ReadPage.cs" />
     <Compile Include="Assets\PlayerInventory.cs" />
     <Compile Include="Assets\LobbiesListManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
@@ -109,11 +110,14 @@
     <Compile Include="Assets\QuestSystem\QuestInfoSO.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexColorCycler.cs" />
+    <Compile Include="Assets\SceneChange.cs" />
     <Compile Include="Assets\Projectile.cs" />
     <Compile Include="Assets\EnemyVision.cs" />
+    <Compile Include="Assets\Readable.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ObjectSpin.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_PhoneNumberValidator.cs" />
     <Compile Include="Assets\DataPersitantObject.cs" />
+    <Compile Include="Assets\Scenes\Pipelines\NewSceneTemplatePipeline.cs" />
     <Compile Include="Assets\Inventory.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextConsoleSimulator.cs" />
@@ -123,8 +127,10 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_UiFrameRateCounter.cs" />
     <Compile Include="Assets\QuestSystem\QuestStep.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
+    <Compile Include="Assets\TransitionInteractable.cs" />
     <Compile Include="Assets\GetClosestTarget.cs" />
     <Compile Include="Assets\PlayerListItem.cs" />
+    <Compile Include="Assets\WaveSpawner.cs" />
     <Compile Include="Assets\SceneSettings.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_B.cs" />
     <Compile Include="Assets\PlayerAttack.cs" />
