Fuck steam servers

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Assets\QuestSystem\QuestData.cs" />
     <Compile Include="Assets\Interactable.cs" />
     <Compile Include="Assets\LobbyController.cs" />
+    <Compile Include="Assets\ComponentTutorialSignal.cs" />
     <Compile Include="Assets\Indicator.cs" />
     <Compile Include="Assets\DataPersistence\IDataPersistence.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_ExampleScript_01.cs" />
@@ -102,10 +103,12 @@
     <Compile Include="Assets\Inventory.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
     <Compile Include="Assets\ComputerPuzzle.cs" />
+    <Compile Include="Assets\TutorialStepSignal.cs" />
     <Compile Include="Assets\QuestSystem\QuestState.cs" />
     <Compile Include="Assets\NPCManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_UiFrameRateCounter.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
+    <Compile Include="Assets\EnableTutorialSignal.cs" />
     <Compile Include="Assets\PlayerListItem.cs" />
     <Compile Include="Assets\SceneSettings.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_B.cs" />
@@ -149,22 +152,27 @@
     <Compile Include="Assets\ReadPage.cs" />
     <Compile Include="Assets\LobbiesListManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
+    <Compile Include="Assets\TutorialStep.cs" />
     <Compile Include="Assets\SlotOptions.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
     <Compile Include="Assets\Manager.cs" />
     <Compile Include="Assets\QuestSystem\Quest.cs" />
     <Compile Include="Assets\DataPersistence\DataPersistenceManager.cs" />
     <Compile Include="Assets\Shop.cs" />
+    <Compile Include="Assets\TutorialManager.cs" />
     <Compile Include="Assets\GameTiles.cs" />
     <Compile Include="Assets\DataPersistantNPC.cs" />
+    <Compile Include="Assets\TutorialUI.cs" />
     <Compile Include="Assets\ShieldFollow.cs" />
     <Compile Include="Assets\WorldTile.cs" />
+    <Compile Include="Assets\TutorialSystem\TutorialDataSO.cs" />
     <Compile Include="Assets\QuestSystem\QuestInfoSO.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexColorCycler.cs" />
     <Compile Include="Assets\SceneChange.cs" />
     <Compile Include="Assets\Resources\Quests\Arena1(Red)\ArenaWaveStep.cs" />
     <Compile Include="Assets\Projectile.cs" />
+    <Compile Include="Assets\AddItems.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ObjectSpin.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_PhoneNumberValidator.cs" />
     <Compile Include="Assets\Scenes\Pipelines\NewSceneTemplatePipeline.cs" />
