god damn dynamic tutorials.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_UiFrameRateCounter.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
     <Compile Include="Assets\EnableTutorialSignal.cs" />
+    <Compile Include="Assets\AddTutorialStepSignal.cs" />
     <Compile Include="Assets\PlayerListItem.cs" />
     <Compile Include="Assets\SceneSettings.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_B.cs" />
